--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:propertyrent-app": "node dist/propertyrent-app/server/server.mjs"
+    "serve:ssr:propertyrent-app": "node dist/propertyrent-app/server/server.mjs",
+    "gh-pages-build": "ng build --configuration production --baseHref ./ && rm -rf docs/* && cp -r dist/propertyrent-app/* docs/"
   },
   "private": true,
   "dependencies": {
